fixed compilation errors changed actuator endpoint to new syntax

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
-management.security.enabled=false
+management.endpoints.web.exposure.include=runtime,health,info,env
+#management.endpoint.runtime.enabled=true
+management.endpoint.health.show-details=always
