changed path for actuator endpoints to old ones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
 management.endpoints.web.exposure.include=runtime,health,info,env
-#management.endpoint.runtime.enabled=true
 management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/
